[project]
name = "templatemaker"
version = "0.1.0"
description = "Given text examples in a similar format, templatemaker creates templates to extract data"
readme = "README.md"
authors = [
    {name = "Adrian Holovaty", email = "adrian@holovaty.com"},
]
requires-python = ">=3.9"
license = {text = "BSD"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
py-modules = ["templatemaker"]

[project.urls]
"Homepage" = "https://github.com/jefftriplett/templatemaker"
"Bug Tracker" = "https://github.com/jefftriplett/templatemaker/issues"
